--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: csharp
 solution: WebApplication2.sln
 script:
-  - xbuild /p:VbcToolExe=vbnc.exe KeyLogger.sln
+  - xbuild /p:VbcToolExe=vbnc.exe WebApplication2.sln
